:wrench:: Fix z-index

--- a/froggy-gaming/src/HomepageLayout/navigationBar/assets/scss/dropdown.scss
+++ b/froggy-gaming/src/HomepageLayout/navigationBar/assets/scss/dropdown.scss
@@ -33,6 +33,7 @@
         padding: 1.6rem;
         font-weight: 400;
         position: relative;
+        z-index: 0;
 
         &.selected {
             .category-icon {
@@ -86,6 +87,7 @@
         column-gap: 4.5rem;
         row-gap: 1rem;
         overflow: hidden;
+        z-index: -1;
 
         &::after {
             content: "";
